--- a/Main.html
+++ b/Main.html
@@ -231,20 +231,13 @@
     </header>
     <main class="menu-main">
       <section class="menu-section wings">
-        <img class="menu-img-img" alt="أجنحة الدجاج" src="data:image/jpeg;base64,/9j/4AAQSkZJRgABAQEASABIAAD..." />
+        <img class="menu-img-img" alt="أجنحة الدجاج" src="data:image/jpeg;base64,[BASE64-Grilled-Chicken-Wings_Featured.jpg]" />
         <h2>أجنحة الدجاج</h2>
         <ul>
           <li>6 قطع <span>5,000 دينار</span></li>
           <li>12 قطعة <span>10,000 دينار</span></li>
           <li>18 قطعة <span>15,000 دينار</span></li>
         </ul>
-        <span class="menu-svg" aria-label="Chicken Wings">
-          <!-- Chicken drumstick SVG -->
-          <svg width="48" height="48" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
-            <ellipse cx="24" cy="32" rx="14" ry="8" fill="#ffd700"/>
-            <ellipse cx="34" cy="18" rx="8" ry="6" fill="#fff"/>
-          </svg>
-        </span>
       </section>
       <section class="menu-section shawarma">
         <h2>شاورما</h2>
@@ -263,7 +256,7 @@
         </span>
       </section>
       <section class="menu-section eastern">
-        <img class="menu-img-img" alt="ماكولات شرقية" src="data:image/jpeg;base64,/9j/4AAQSkZJRgABAQEASABIAAD..." />
+        <img class="menu-img-img" alt="ماكولات شرقية" src="data:image/jpeg;base64,[BASE64-dominican-food-hero.jpg]" />
         <h2>ماكولات شرقية</h2>
         <ul>
           <li>وجبة دولمة + لحم <span>7,000 دينار</span></li>
@@ -271,7 +264,7 @@
           <li>نصف وجبة دولمة <span>3,000 دينار</span></li>
         </ul>
         <div class="sub-section">
-          <img class="menu-img-img" alt="كبة" src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAA..." />
+          <img class="menu-img-img" alt="كبة" src="data:image/png;base64,[BASE64-Screenshot 2025-07-10 234508.png]" />
           <h3>كبة</h3>
           <ul>
             <li>كبة مقلية <span>5,000 دينار</span></li>
@@ -279,6 +272,7 @@
           </ul>
         </div>
         <div class="sub-section">
+          <img class="menu-img-img" alt="Random" src="data:image/jpeg;base64,[BASE64-R (1).jfif]" />
           <h3>صحن سمك مشوي</h3>
           <span>8,000 دينار</span>
         </div>
@@ -291,6 +285,7 @@
         </span>
       </section>
       <section class="menu-section steak">
+        <img class="menu-img-img" alt="Random" src="data:image/jpeg;base64,[BASE64-R.jfif]" />
         <h2>ستيك</h2>
         <ul>
           <li>دجاج مشوي <span>7,000 دينار</span></li>
@@ -305,6 +300,7 @@
         </span>
       </section>
       <section class="menu-section drinks">
+        <img class="menu-img-img" alt="Random" src="data:image/jpeg;base64,[BASE64-easy-dinner]" />
         <h2>مشروبات</h2>
         <ul>
           <li>بيبسي <span>500 دينار</span></li>
