--- a/Main.html
+++ b/Main.html
@@ -231,7 +231,7 @@
     </header>
     <main class="menu-main">
       <section class="menu-section wings">
-        <img class="menu-img-img" alt="أجنحة الدجاج" src="data:image/jpeg;base64,[BASE64-Grilled-Chicken-Wings_Featured.jpg]" />
+        <img class="menu-img-img" alt="أجنحة الدجاج" src="Grilled-Chicken-Wings_Featured.jpg" />
         <h2>أجنحة الدجاج</h2>
         <ul>
           <li>6 قطع <span>5,000 دينار</span></li>
@@ -256,7 +256,7 @@
         </span>
       </section>
       <section class="menu-section eastern">
-        <img class="menu-img-img" alt="ماكولات شرقية" src="data:image/jpeg;base64,[BASE64-dominican-food-hero.jpg]" />
+        <img class="easy-dinner-recipes-pizza-casserole-1676054902.avif" alt="ماكولات شرقية" src="data:image/jpeg;base64,[BASE64-dominican-food-hero.jpg]" />
         <h2>ماكولات شرقية</h2>
         <ul>
           <li>وجبة دولمة + لحم <span>7,000 دينار</span></li>
@@ -285,7 +285,7 @@
         </span>
       </section>
       <section class="menu-section steak">
-        <img class="menu-img-img" alt="Random" src="data:image/jpeg;base64,[BASE64-R.jfif]" />
+        <img class="R.jfif" alt="Random" src="data:image/jpeg;base64,[BASE64-R.jfif]" />
         <h2>ستيك</h2>
         <ul>
           <li>دجاج مشوي <span>7,000 دينار</span></li>
@@ -300,7 +300,7 @@
         </span>
       </section>
       <section class="menu-section drinks">
-        <img class="menu-img-img" alt="Random" src="data:image/jpeg;base64,[BASE64-easy-dinner]" />
+        <img class="Screenshot 2025-07-10 234508.png" alt="Random" src="data:image/jpeg;base64,[BASE64-easy-dinner]" />
         <h2>مشروبات</h2>
         <ul>
           <li>بيبسي <span>500 دينار</span></li>
