--- a/Main.html
+++ b/Main.html
@@ -249,7 +249,7 @@
         </ul>
         <span class="menu-svg" aria-label="Shawarma">
           <!-- Shawarma skewer SVG -->
-          <svg width="48" height="48" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
+       <img class="dominican-food-hero.jpg" alt=" شاورمە" src="Grilled-Chicken-Wings_Featured.jpg" />
             <rect x="20" y="8" width="8" height="28" rx="4" fill="#ffd700"/>
             <rect x="22" y="36" width="4" height="8" rx="2" fill="#fff"/>
           </svg>
