--- a/Main.html
+++ b/Main.html
@@ -231,7 +231,7 @@
     </header>
     <main class="menu-main">
       <section class="menu-section wings">
-        <img class="menu-img-img" alt="أجنحة الدجاج" src="Grilled-Chicken-Wings_Featured.jpg" />
+        <img class="Grilled-Chicken-Wings_Featured.jpg" alt="أجنحة الدجاج" src="Grilled-Chicken-Wings_Featured.jpg" />
         <h2>أجنحة الدجاج</h2>
         <ul>
           <li>6 قطع <span>5,000 دينار</span></li>
@@ -249,14 +249,14 @@
         </ul>
         <span class="menu-svg" aria-label="Shawarma">
           <!-- Shawarma skewer SVG -->
-       <img class="dominican-food-hero.jpg" alt=" شاورمە" src="Grilled-Chicken-Wings_Featured.jpg" />
+       <img class="pasta.jpg" alt=" شاورمە" src="Grilled-Chicken-Wings_Featured.jpg" />
             <rect x="20" y="8" width="8" height="28" rx="4" fill="#ffd700"/>
             <rect x="22" y="36" width="4" height="8" rx="2" fill="#fff"/>
           </svg>
         </span>
       </section>
       <section class="menu-section eastern">
-        <img class="easy-dinner-recipes-pizza-casserole-1676054902.avif" alt="ماكولات شرقية" src="data:image/jpeg;base64,[BASE64-dominican-food-hero.jpg]" />
+        <img class="pizza.jpg" alt="ماكولات شرقية" src="data:image/jpeg;base64,[BASE64-dominican-food-hero.jpg]" />
         <h2>ماكولات شرقية</h2>
         <ul>
           <li>وجبة دولمة + لحم <span>7,000 دينار</span></li>
