--- a/Main.html
+++ b/Main.html
@@ -235,7 +235,7 @@
         </ul>
       </section>
       <section class="menu-section pizza">
-        <img class="menu-img-img" alt="بيتزا" src="pizza.jpg" />
+        <img class="menu-img-img" alt="بيتزا" src="armando-ascorve-morales-cr81IE_r894-unsplash.jpg" />
         <h2>بيتزا</h2>
         <ul>
           <li>بيبروني صغير <span>6,000 دينار</span> وسط <span>8,000 دينار</span> كبير <span>12,000 دينار</span></li>
@@ -246,7 +246,7 @@
         </ul>
       </section>
       <section class="menu-section burger">
-        <img class="menu-img-img" alt="همبركر" src="armando-ascorve-morales-cr81IE_r894-unsplash.jpg" />
+        <img class="menu-img-img" alt="همبركر" src="pizza.jpg" />
         <h2>همبركر</h2>
         <ul>
           <li>لحم <span>5,500 دينار</span></li>
