--- a/Main.html
+++ b/Main.html
@@ -185,7 +185,7 @@
         </ul>
       </section>
       <section class="menu-section shawarma">
-        <img class="menu-img-img" alt="شاورما" src="burger.jpg" />
+        <img class="shawr.jfif" alt="شاورما" src="burger.jpg" />
         <h2>شاورما</h2>
         <ul>
           <li>لفة دجاج <span>1,500 دينار</span></li>
@@ -211,13 +211,13 @@
           </ul>
         </div>
         <div class="sub-section">
-          <img class="menu-img-img" alt="صحن سمك مشوي" src="R (1).jfif" />
+          <img class="fish.jpg" alt="صحن سمك مشوي" src="R (1).jfif" />
           <h3>صحن سمك مشوي</h3>
           <span>8,000 دينار</span>
         </div>
       </section>
       <section class="menu-section steak">
-        <img class="menu-img-img" alt="ستيك" src="R.jfif" />
+        <img class="mrishk.png" alt="ستيك" src="R.jfif" />
         <h2>ستيك</h2>
         <ul>
           <li>دجاج مشوي <span>7,000 دينار</span></li>
@@ -225,7 +225,7 @@
         </ul>
       </section>
       <section class="menu-section drinks">
-        <img class="menu-img-img" alt="مشروبات" src="easy-dinner" />
+        <img class="armando-ascorve-morales-cr81IE_r894-unsplash.jpg" alt="مشروبات" src="easy-dinner" />
         <h2>مشروبات</h2>
         <ul>
           <li>بيبسي <span>500 دينار</span></li>
@@ -235,7 +235,7 @@
         </ul>
       </section>
       <section class="menu-section pizza">
-        <img class="menu-img-img" alt="بيتزا" src="armando-ascorve-morales-cr81IE_r894-unsplash.jpg" />
+        <img class="pizza.jpg" alt="بيتزا" src="armando-ascorve-morales-cr81IE_r894-unsplash.jpg" />
         <h2>بيتزا</h2>
         <ul>
           <li>بيبروني صغير <span>6,000 دينار</span> وسط <span>8,000 دينار</span> كبير <span>12,000 دينار</span></li>
@@ -246,7 +246,7 @@
         </ul>
       </section>
       <section class="menu-section burger">
-        <img class="menu-img-img" alt="همبركر" src="pizza.jpg" />
+        <img class="burger.jpg" alt="همبركر" src="pizza.jpg" />
         <h2>همبركر</h2>
         <ul>
           <li>لحم <span>5,500 دينار</span></li>
@@ -254,20 +254,20 @@
           <li>لفة دجاج زنجر <span>5,000 دينار</span></li>
         </ul>
         <div class="sub-section">
-          <img class="menu-img-img" alt="وجبة أوفكيل" src="Grilled-Chicken-Wings_Featured.jpg" />
+          <img class="s.png" alt="وجبة أوفكيل" src="Grilled-Chicken-Wings_Featured.jpg" />
           <h3>وجبة أوفكيل</h3>
           <p>شاورمة دجاج، شاورمة لحم، فينكر بطاطه، بيتزا و اثنين Pepsi</p>
           <span>10,000 دينار</span>
         </div>
         <div class="sub-section">
-          <img class="menu-img-img" alt="وجبة أوفكيل عائلي" src="burger.jpg" />
+          <img class="s.png" alt="وجبة أوفكيل عائلي" src="burger.jpg" />
           <h3>وجبة أوفكيل عائلي</h3>
           <p>2 شاورما دجاج، 2 شاورما لحم، بيتزا وسط، فينكر بطاطه وسط، 4 Pepsi</p>
           <span>20,000 دينار</span>
         </div>
       </section>
       <section class="menu-section combo">
-        <img class="menu-img-img" alt="كومبو" src="dominican-food-hero.jpg" />
+        <img class="burger.jpg" alt="كومبو" src="dominican-food-hero.jpg" />
         <h2>كومبو</h2>
         <ul>
           <li>همبركر لحم <span>7,000 دينار</span></li>
@@ -325,7 +325,7 @@
       </section>
     </main>
     <footer class="menu-footer">
-      <p>Oakville Restaurant &copy; 2024</p>
+      <p>Rozh Studio 2025</p>
     </footer>
   </div>
 </body>
