--- a/Main.html
+++ b/Main.html
@@ -185,7 +185,7 @@
         </ul>
       </section>
       <section class="menu-section shawarma">
-        <img class="menu-img-img" alt="شاورما" src="burger.jpg" />
+        <img class="menu-img-img" alt="شاورما" src="shawr.jfif" />
         <h2>شاورما</h2>
         <ul>
           <li>لفة دجاج <span>1,500 دينار</span></li>
@@ -211,7 +211,7 @@
           </ul>
         </div>
         <div class="sub-section">
-          <img class="menu-img-img" alt="صحن سمك مشوي" src="R (1).jfif" />
+          <img class="menu-img-img" alt="صحن سمك مشوي" src="fish.jpg" />
           <h3>صحن سمك مشوي</h3>
           <span>8,000 دينار</span>
         </div>
@@ -225,7 +225,7 @@
         </ul>
       </section>
       <section class="menu-section drinks">
-        <img class="menu-img-img" alt="مشروبات" src="easy-dinner" />
+        <img class="menu-img-img" alt="مشروبات" src="armando-ascorve-morales-cr81IE_r894-unsplash.jpg" />
         <h2>مشروبات</h2>
         <ul>
           <li>بيبسي <span>500 دينار</span></li>
@@ -235,7 +235,7 @@
         </ul>
       </section>
       <section class="menu-section pizza">
-        <img class="menu-img-img" alt="بيتزا" src="armando-ascorve-morales-cr81IE_r894-unsplash.jpg" />
+        <img class="menu-img-img" alt="بيتزا" src="pizza.jpg" />
         <h2>بيتزا</h2>
         <ul>
           <li>بيبروني صغير <span>6,000 دينار</span> وسط <span>8,000 دينار</span> كبير <span>12,000 دينار</span></li>
