--- a/Main.html
+++ b/Main.html
@@ -267,7 +267,7 @@
         </div>
       </section>
       <section class="menu-section combo">
-        <img class="menu-img-img" alt="كومبو" src="dominican-food-hero.jpg" />
+        <img class="menu-img-img" alt="كومبو" src="burgur.jpg" />
         <h2>كومبو</h2>
         <ul>
           <li>همبركر لحم <span>7,000 دينار</span></li>
